--- a/notebooks/Classification of Lab Samples.ipynb
+++ b/notebooks/Classification of Lab Samples.ipynb
@@ -1630,11 +1630,11 @@
    "outputs": [],
    "source": [
     "def getTimeSample(time_index):\n",
-    "    df0 = provider.dfs_data[0]\n",
-    "    num = len(provider.dfs_data)\n",
+    "    df0 = provider.dfs_cenered_adjusted_read_count[0]\n",
+    "    num = len(provider.dfs_cenered_adjusted_read_count)\n",
     "    ser = pd.Series(np.repeat(0, len(df0.index)), index=df0.index)\n",
     "    for idx in range(num):\n",
-    "        ser += provider.dfs_data[idx][time_index]\n",
+    "        ser += provider.dfs_cenered_adjusted_read_count[idx][time_index]\n",
     "    df = pd.DataFrame(ser/num)\n",
     "    df_result = transform_data.trinaryReadsDF(df_sample=df)\n",
     "    return df_result.T"
@@ -1961,7 +1961,7 @@
     }
    ],
    "source": [
-    "provider.dfs_data[1].head()"
+    "provider.dfs_cenered_adjusted_read_count[1].head()"
    ]
   },
   {
@@ -2725,7 +2725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
